[feat] 알림이 존재하는 날짜에 표시하기 구현

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="green_700">#31E864</color>
     <color name="green_600">#68EB72</color>
     <color name="green_500">#73F87C</color>
+    <color name="green_200">#DEFDE0</color>
     <color name="green_100">#EEFEEF</color>
 
     <color name="gray_25">#F8F8F8</color>
