--- a/app/src/main/res/layout/fragment_noti_calendar.xml
+++ b/app/src/main/res/layout/fragment_noti_calendar.xml
@@ -21,6 +21,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
