--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,15 +24,12 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
+            <ImageView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="148dp"
+                android:layout_height="18dp"
                 android:layout_marginStart="@dimen/spacingBase"
-                android:fontFamily="@font/montserrat_eb"
-                android:text="@string/logo_text"
-                android:textColor="@color/gray_700"
-                android:textSize="22sp"
+                android:src="@drawable/ic_app_text_logo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
