[fix] 회원가입 뷰에서 이용약관 및 개인정보 취급방침 텍스트의 margin이 적용되지 않는 버그 수정

--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -125,7 +125,7 @@
 
         <TextView
             android:id="@+id/sign_term"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/spacingBase"
             android:layout_marginBottom="@dimen/spacing5"
@@ -135,6 +135,7 @@
             android:textColor="@color/gray_300"
             android:textSize="@dimen/typographyDescription"
             app:layout_constraintBottom_toTopOf="@id/next"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
