--- a/app/src/main/res/layout/fragment_gallery_image.xml
+++ b/app/src/main/res/layout/fragment_gallery_image.xml
@@ -58,8 +58,12 @@
             android:id="@+id/image_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:spanCount="3"
+            tools:itemCount="20"
+            tools:listitem="@layout/item_gallery_image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
