--- a/app/src/main/res/layout/activity_how_to_use.xml
+++ b/app/src/main/res/layout/activity_how_to_use.xml
@@ -36,8 +36,10 @@
             style="@style/Widget.Button.Activate.Green"
             android:layout_width="match_parent"
             android:layout_margin="@dimen/spacingBase"
+            android:backgroundTint="@color/black"
             android:text="@string/how_to_use_yes_button_text"
             android:textAppearance="@style/Widget.Button.Basic.TextAppearance"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
