--- a/app/src/main/res/drawable/shape_selected_indicator.xml
+++ b/app/src/main/res/drawable/shape_selected_indicator.xml
@@ -4,5 +4,5 @@
     android:shape="ring"
     android:thickness="4dp"
     android:useLevel="false">
-    <solid android:color="@color/green_500" />
+    <solid android:color="@color/black" />
 </shape>
