--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,8 +85,8 @@
     </style>
 
     <style name="Widget.Button.Basic" parent="">
-        <item name="android:paddingTop">@dimen/spacingBase</item>
-        <item name="android:paddingBottom">@dimen/spacingBase</item>
+        <item name="android:paddingTop">@dimen/spacing14</item>
+        <item name="android:paddingBottom">@dimen/spacing14</item>
         <item name="android:outlineProvider">none</item>
         <item name="android:layout_marginEnd">@dimen/spacingBase</item>
         <item name="android:layout_marginStart">@dimen/spacingBase</item>
@@ -111,6 +111,7 @@
 
     <style name="Widget.Button.Activate.Green" parent="Widget.Button.Basic">
         <item name="android:background">@drawable/selector_button</item>
+        <item name="android:textColor">@color/selector_button_text_color</item>
         <item name="android:layout_height">@dimen/widgetHeightBase</item>
         <item name="android:gravity">center</item>
     </style>
