--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,9 +36,10 @@
             android:layout_height="58dp"
             android:background="@color/white"
             android:paddingVertical="4dp"
-            android:theme="@style/TextAppearance.BottomNavigation.Tab.Text"
             app:itemIconSize="20dp"
             app:itemIconTint="@drawable/selector_navigation_menu_item_color"
+            app:itemTextAppearanceActive="@style/TextAppearance.BottomNavigation.Tab.Text"
+            app:itemTextAppearanceInactive="@style/TextAppearance.BottomNavigation.Tab.Text"
             app:itemTextColor="@drawable/selector_navigation_menu_item_color"
             app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
