--- a/app/src/main/res/layout/dialog_folder_more.xml
+++ b/app/src/main/res/layout/dialog_folder_more.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/folder_name_edit"
-                android:textAppearance="@style/Widget.BottomSheetDialog.Option.TextAppearance"
+                android:textColor="@color/gray_600"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <View
@@ -39,21 +39,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/folder_delete"
-                android:textAppearance="@style/Widget.BottomSheetDialog.Option.TextAppearance"
                 android:textColor="@color/pink"
                 app:layout_constraintTop_toBottomOf="@id/update" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/close"
             style="@style/Widget.BottomSheetDialog.Option"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/shape_border_radius_16"
-            android:backgroundTint="@color/white"
+            android:layout_marginTop="4dp"
             android:text="@string/close"
-            android:textAppearance="@style/Widget.BottomSheetDialog.Option.TextAppearance"
+            android:textColor="@color/gray_600"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/options" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
