--- a/app/src/main/res/layout/dialog_one_button.xml
+++ b/app/src/main/res/layout/dialog_one_button.xml
@@ -22,11 +22,11 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="@string/item_non_update_dialog_title"
                 android:textAppearance="@style/Widget.Dialog.TextAppearance.Title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/item_non_update_dialog_title" />
 
             <TextView
                 android:id="@+id/description"
@@ -51,9 +51,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:textAppearance="@style/Widget.Button.Dialog.TextAppearance"
-                app:layout_constraintTop_toBottomOf="@id/description"
-                android:text="@string/confirm" />
+                android:text="@string/confirm"
+                android:textColor="@color/green_500"
+                app:layout_constraintTop_toBottomOf="@id/description" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
