--- a/app/src/main/res/layout/dialog_two_button.xml
+++ b/app/src/main/res/layout/dialog_two_button.xml
@@ -52,6 +52,7 @@
                 android:layout_marginTop="32dp"
                 android:text="@string/cancel"
                 android:textAppearance="@style/Widget.Button.Dialog.TextAppearance"
+                android:textColor="@color/green_500"
                 app:layout_constraintEnd_toStartOf="@id/yes"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/description" />
