--- a/app/src/main/res/layout/dialog_bottom_noti_setting.xml
+++ b/app/src/main/res/layout/dialog_bottom_noti_setting.xml
@@ -157,7 +157,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/complete"
-                style="@style/Widget.Button.Full.Activate"
+                style="@style/Widget.Button.Full.Round.Activate.Green"
                 android:layout_width="match_parent"
                 android:layout_margin="@dimen/spacingBase"
                 android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.complete)}"
