--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -159,7 +159,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/add"
-                    style="@style/Widget.Button.Full.Activate"
+                    style="@style/Widget.Button.Full.Round.Activate.Green"
                     android:layout_width="match_parent"
                     android:layout_marginHorizontal="@dimen/spacingBase"
                     android:layout_marginBottom="@dimen/spacingBase"
