--- a/app/src/main/res/layout/dialog_bottom_shop_link_input.xml
+++ b/app/src/main/res/layout/dialog_bottom_shop_link_input.xml
@@ -104,7 +104,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/get_item"
-                style="@style/Widget.Button.Full.Activate"
+                style="@style/Widget.Button.Full.Round.Activate.Green"
                 android:layout_width="match_parent"
                 android:layout_margin="@dimen/spacingBase"
                 android:enabled="@{viewModel.itemUrlInput.length() > 0}"
