--- a/app/src/main/res/layout/fragment_noti_setting.xml
+++ b/app/src/main/res/layout/fragment_noti_setting.xml
@@ -46,7 +46,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/save"
-                style="@style/Widget.Button.Small.Green"
+                style="@style/Widget.Button.Small.Round.Green"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/spacingBase"
