--- a/app/src/main/res/layout/fragment_sign_in_email.xml
+++ b/app/src/main/res/layout/fragment_sign_in_email.xml
@@ -134,7 +134,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/send_mail"
-            style="@style/Widget.Button.Full.Activate"
+            style="@style/Widget.Button.Full.Round.Activate.Green"
             android:layout_width="match_parent"
             android:layout_marginBottom="@dimen/spacingBase"
             android:enabled="@{viewModel.validEmailFormat == true}"
