--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -77,7 +77,8 @@
         <item name="android:paddingBottom">@dimen/spacingBase</item>
         <item name="backgroundTint">@color/white</item>
         <item name="cornerRadius">16dp</item>
-        <item name="android:textAppearance">@style/Widget.BottomSheetDialog.Option.TextAppearance</item>
+        <item name="android:textAppearance">@style/Widget.BottomSheetDialog.Option.TextAppearance
+        </item>
     </style>
 
     <style name="Widget.Button" parent="">
@@ -108,15 +109,18 @@
     <style name="Widget.Button.Full.Basic" parent="Widget.Material.Button.Basic">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginStart">@dimen/spacingBase</item>
-        <item name="android:layout_marginEnd">@dimen/spacingBase</item>
         <item name="android:paddingTop">@dimen/spacing14</item>
         <item name="android:paddingBottom">@dimen/spacing14</item>
-        <item name="cornerRadius">30dp</item>
         <item name="android:textAppearance">@style/TextAppearance.Button.Full.Basic</item>
     </style>
 
-    <style name="Widget.Button.Small.Basic" parent="Widget.Material.Button.Basic">
+    <style name="Widget.Button.Full.Round" parent="Widget.Button.Full.Basic">
+        <item name="android:layout_marginStart">@dimen/spacingBase</item>
+        <item name="android:layout_marginEnd">@dimen/spacingBase</item>
+        <item name="cornerRadius">30dp</item>
+    </style>
+
+    <style name="Widget.Button.Small.Round" parent="Widget.Material.Button.Basic">
         <item name="android:paddingStart">@dimen/spacingBase</item>
         <item name="android:paddingEnd">@dimen/spacingBase</item>
         <item name="android:paddingTop">@dimen/spacingSmall</item>
@@ -125,32 +129,32 @@
         <item name="android:textAppearance">@style/TextAppearance.Button.Small.Basic</item>
     </style>
 
-    <style name="Widget.Button.Small.Activate" parent="Widget.Button.Small.Basic">
-        <item name="backgroundTint">@color/selector_button_background_color</item>
-        <item name="android:textColor">@color/selector_button_text_color</item>
+    <style name="Widget.Button.Small.Round.Activate.Green" parent="Widget.Button.Small.Round">
+        <item name="backgroundTint">@color/selector_button_background_main_color</item>
+        <item name="android:textColor">@color/selector_button_text_main_color</item>
     </style>
 
-    <style name="Widget.Button.Small.Green" parent="Widget.Button.Small.Basic">
+    <style name="Widget.Button.Small.Round.Green" parent="Widget.Button.Small.Round">
         <item name="backgroundTint">@color/green_500</item>
         <item name="android:textColor">@color/gray_700</item>
     </style>
 
-    <style name="Widget.Button.Full.Activate" parent="Widget.Button.Full.Basic">
-        <item name="backgroundTint">@color/selector_button_background_color</item>
-        <item name="android:textColor">@color/selector_button_text_color</item>
+    <style name="Widget.Button.Full.Round.Activate.Green" parent="Widget.Button.Full.Round">
+        <item name="backgroundTint">@color/selector_button_background_main_color</item>
+        <item name="android:textColor">@color/selector_button_text_main_color</item>
     </style>
 
-    <style name="Widget.Button.Full.Activate.CenterDialog" parent="Widget.Button.Full.Activate">
+    <style name="Widget.Button.Full.Round.Activate.Green.CenterDialog" parent="Widget.Button.Full.Round.Activate.Green">
         <item name="android:paddingTop">@dimen/spacing12</item>
         <item name="android:paddingBottom">@dimen/spacing12</item>
     </style>
 
-    <style name="Widget.Button.Full.Green" parent="Widget.Button.Full.Basic">
+    <style name="Widget.Button.Full.Round.Green" parent="Widget.Button.Full.Round">
         <item name="backgroundTint">@color/green_500</item>
         <item name="android:textColor">@color/gray_700</item>
     </style>
 
-    <style name="Widget.Button.Black" parent="Widget.Button.Full.Basic">
+    <style name="Widget.Button.Full.Round.Black" parent="Widget.Button.Full.Round">
         <item name="backgroundTint">@color/black</item>
         <item name="android:textColor">@color/white</item>
     </style>
@@ -285,7 +289,7 @@
         <item name="android:fontFamily">@font/suit_r</item>
     </style>
 
-    <style name="Calendar"/>
+    <style name="Calendar" />
 
     <style name="Calendar.CalendarViewStyle">
         <item name="dayHeight">44dp</item>
