--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -304,18 +304,13 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/go_to_shop_btn"
+            style="@style/Widget.Button.Full.Activate.Black"
             android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:background="@{context.getColor(viewModel.wishItem.url == null ? R.color.gray_50 : R.color.black)}"
+            android:layout_height="wrap_content"
             android:enabled="@{viewModel.wishItem.url == null ? false : true}"
-            android:fontFamily="@font/suit_b"
-            android:gravity="center"
-            android:paddingVertical="@dimen/spacingBase"
             android:text="@string/go_to_shop_button_text"
-            android:textColor="@{context.getColor(viewModel.wishItem.url == null ? R.color.gray_300 : R.color.white)}"
-            android:textSize="@dimen/typographyBase"
             app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
