--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -144,6 +144,12 @@
         <item name="android:textColor">@color/selector_button_text_main_color</item>
     </style>
 
+    <style name="Widget.Button.Full.Activate.Black" parent="Widget.Button.Full.Basic">
+        <item name="cornerRadius">0dp</item>
+        <item name="backgroundTint">@color/selector_button_background_sub_color</item>
+        <item name="android:textColor">@color/selector_button_text_sub_color</item>
+    </style>
+
     <style name="Widget.Button.Full.Round.Activate.Green.CenterDialog" parent="Widget.Button.Full.Round.Activate.Green">
         <item name="android:paddingTop">@dimen/spacing12</item>
         <item name="android:paddingBottom">@dimen/spacing12</item>
