[feat] 상품명과 가격이 모두 입력되지 않은 경우 링크 공유 아이템 등록 버튼 비활성화 처리 구현

--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -163,7 +163,7 @@
                     android:layout_width="match_parent"
                     android:layout_marginHorizontal="@dimen/spacingBase"
                     android:layout_marginBottom="@dimen/spacingBase"
-                    android:enabled="@{viewModel.itemName.length() > 0 ? true : false}"
+                    android:enabled="@{viewModel.itemName.length() > 0 &amp;&amp; viewModel.itemPrice.length() > 0 ? true : false}"
                     android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.wish_list_registration_button_text)}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:text="@string/wish_list_registration_button_text" />
